# veldora

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: ettuh.rs  ettup.rs  ettuz.rs  lib.rs  main.rs
