[package]
name = "veldora"
description = "A command-line program to bruteforce zips, pdfs and some popular hashes."
homepage = "https://github.com/tamton-aquib/veldora"
repository = "https://github.com/tamton-aquib/veldora"
documentation = "https://docs.rs/veldora"
version = "0.2.0"
authors = ["tamton-aquib <aquibjavedt007@gmail.com>"]
license = "MIT"
edition = "2018"
keywords = ["bruteforce", "dictionary", "zip", "pdf", "hash"]

[dependencies]
md-5 = "0.10.1"
sha-1 = "0.10"
sha2 = "0.10.2"
pdf = "0.7.2"
zip = "0.6.2"
indicatif = "0.17.0"
colored = "2.0"
tiger = "0.2"

[profile.optimized]
inherits = "release"
opt-level = "z"
strip = true
